--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,6 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
-.env
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +21,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
