--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint src --ext ts,tsx,cjs --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "playwright test",
+    "prepare": "playwright install"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.2.10",
@@ -18,11 +20,14 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@clerk/testing": "^1.9.1",
+    "@playwright/test": "^1.53.2",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^17.0.1",
     "eslint": "^9.7.0",
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
